tweak(css): attempt to fix button spacing

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -52,7 +52,8 @@
   /* Badges */
   .base__badge {
     @apply whitespace-nowrap py-1 px-2
-           text-sm rounded-full;
+           text-sm rounded-full
+           leading-7;
   }
 
   .badge-blue {
@@ -351,6 +352,7 @@
 @layer utilities {
   .btn-sm {
     @apply py-1 px-2 text-sm;
+    @apply inline-block my-[0.1rem];
 
     /* Fix for `button` elements which become too tall without this. */
     line-height: 1rem;
